Edit project text

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     font-family: 'PixelFont', sans-serif;  
     font-size: x-large;
+    font-weight: 1;
     color: rgb(238, 204, 154); 
     background-color: rgb(43, 42, 41); 
     margin: 15px;
@@ -16,5 +17,6 @@ body {
     font-weight: normal;       
     font-style: normal;
 }
+
 
 
