--- a/container.css
+++ b/container.css
@@ -26,6 +26,7 @@
     max-width: 30%;
     min-width: 400px;
     min-height: 100vb;
+    max-height: 1000px;
     flex-wrap: wrap-reverse;
     overflow:hidden
 }
