--- a/container.css
+++ b/container.css
@@ -23,7 +23,7 @@
     padding: 16px;
     border: 5px solid rgb(238, 204, 154);
     margin: 15px;
-    max-width: 30%;
+    max-width: 600px;
     min-width: 400px;
     min-height: 100vb;
     max-height: 1000px;
