--- a/container.css
+++ b/container.css
@@ -25,8 +25,7 @@
     margin: 15px;
     max-width: 600px;
     min-width: 400px;
-    min-height: 100vb;
-    max-height: 1000px;
+    min-height: 1000px;
     flex-wrap: wrap-reverse;
     overflow:hidden
 }
